<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/amarilloClaro"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombrePropietario"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/negro"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombreMascota"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/negro"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tipoRaza"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/negro"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />

    </LinearLayout>

    <Space
        android:layout_width="15dp"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewPropietario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombrePropietario"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />

        <TextView
            android:id="@+id/textViewMascota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombreMascota"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />

        <TextView
            android:id="@+id/textViewRaza"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tipoRaza"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />

    </LinearLayout>

</LinearLayout>